--- a/style.scss
+++ b/style.scss
@@ -13,6 +13,8 @@ body{
 /*CUERPO*/
 @import "./StyleComp/mainHome";
 @import "./StyleComp/mainAbout";
+@import "./StyleComp/mainProjects";
+@import "./StyleComp/mainContact";
 
 /*PIE DE PAGINA*/
 @import "./StyleComp/footer";
