--- a/StyleComp/_mainAbout.scss
+++ b/StyleComp/_mainAbout.scss
@@ -1,5 +1,29 @@
 .mainAbout{
-    height: 80vh;
+    height: 65vh;
     width: 100%;
-    
+    margin-top: 15vh;
+    display: flex;
+    flex-direction: row;
+    .secA,.secB{
+        height: 70vh;
+        width: 50%;
+        padding: 2%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .secA{
+        img{
+            width: 300px;
+            filter: grayscale(100%) contrast(80%);
+            transition: all 1s ease;
+        } 
+        img:hover{
+            filter: none;
+        }    
+    }
+    .secB{
+        font-family: 'Poppins', sans-serif;
+    }
+
 }
