--- a/StyleComp/_mainHome.scss
+++ b/StyleComp/_mainHome.scss
@@ -2,9 +2,9 @@
     height: auto;
     width: 100%;
     #galeria{
-        margin-top: 12.5vh;
-        padding-left: 5vh;
-        padding-right: 5vh;
+        margin-top: 11vh;
+        padding-left: 3vh;
+        padding-right: 3vh;
         img{
             width: 100%;
             filter: grayscale(100%) contrast(80%);
@@ -15,6 +15,7 @@
         }
         img:hover{
             filter:none;
+            transform: scale(101%);
         }
     }
 }
