--- a/style.css
+++ b/style.css
@@ -266,5 +266,46 @@ footer .footerC {
     text-align: center;
     margin-top: 1rem;
   }
+  .mainAbout {
+    height: auto;
+    width: 100%;
+    margin-top: 15vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .mainAbout .secA, .mainAbout .secB {
+    height: auto;
+    width: 100%;
+    padding: 2%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .mainAbout .secA img {
+    width: 300px;
+    -webkit-filter: grayscale(100%) contrast(80%);
+            filter: grayscale(100%) contrast(80%);
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
+  }
+  .mainAbout .secA img:hover {
+    -webkit-filter: none;
+            filter: none;
+  }
+  .mainAbout .secB {
+    padding: 40px;
+    font-family: 'Poppins', sans-serif;
+  }
 }
 /*# sourceMappingURL=style.css.map */
