--- a/StyleComp/_mainAboutMobile.scss
+++ b/StyleComp/_mainAboutMobile.scss
@@ -14,7 +14,7 @@
     }
     .secA{
         img{
-            width: 350px;
+            width: 90%;
             filter: grayscale(100%) contrast(80%);
             transition: all 1s ease;
         } 
