--- a/StyleComp/_navBar.scss
+++ b/StyleComp/_navBar.scss
@@ -39,4 +39,13 @@ header{
             color: rgb(15, 15, 15);
         }
     }
+    .burger{
+        height: 20px;
+        width: 20px;
+        background-color: aqua;
+        display: none;
+    }
+    .splashMenu{
+        display: none;
+    }
 }
