--- a/StyleComp/_mainAbout.scss
+++ b/StyleComp/_mainAbout.scss
@@ -23,7 +23,8 @@
         }    
     }
     .secB{
-        padding-right: 10%;
+        padding-left: 4%;
+        padding-right: 8%;
         font-family: 'Poppins', sans-serif;
     }
 
