--- a/StyleComp/_navBar.scss
+++ b/StyleComp/_navBar.scss
@@ -4,6 +4,7 @@ header{
     width: 100%;
     background-color: rgba(255, 255, 255, 0.521);
     top: 0;
+    left: 0;
     position: fixed;
     display: flex;
     justify-content: space-around;
