--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ header {
   width: 100%;
   background-color: rgba(255, 255, 255, 0.521);
   top: 0;
+  left: 0;
   position: fixed;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -232,6 +233,7 @@ footer .footerC {
     width: 100%;
     background-color: rgba(255, 255, 255, 0.521);
     top: 0;
+    left: 0;
     position: fixed;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -245,7 +247,6 @@ footer .footerC {
     -webkit-transition: all 1s ease;
     transition: all 1s ease;
     z-index: 10;
-    position: relative;
   }
   header .conteinerLogo {
     -webkit-box-flex: 0.5;
@@ -307,11 +308,11 @@ footer .footerC {
     background-color: dimgray;
   }
   header .splashMenu {
-    display: block;
+    display: inline-block;
     height: 100vh;
     width: 100%;
     background-color: rgba(97, 97, 97, 0.753);
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     -webkit-transform: translateX(100%);
@@ -319,6 +320,39 @@ footer .footerC {
     -webkit-transition: all 1s ease;
     transition: all 1s ease;
     z-index: -10;
+  }
+  header .splashMenu nav {
+    display: block;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    height: 100vh;
+  }
+  header .splashMenu nav ul {
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    list-style: none;
+  }
+  header .splashMenu nav ul li a {
+    margin: 20px 20px;
+    text-decoration: none;
+    color: white;
+    font-size: 25px;
+  }
+  header .splashMenu nav ul li a:hover {
+    color: #0f0f0f;
   }
   header .active {
     -webkit-transform: translateX(0%);
