--- a/style.css
+++ b/style.css
@@ -313,6 +313,7 @@ footer .footerC {
   header .burgerConteiner #burger .act1 {
     -webkit-transform: translateY(12px) rotate(-45deg);
             transform: translateY(12px) rotate(-45deg);
+    background-color: white;
   }
   header .burgerConteiner #burger .act2 {
     display: none;
@@ -320,6 +321,7 @@ footer .footerC {
   header .burgerConteiner #burger .act3 {
     -webkit-transform: translateY(-12px) rotate(45deg);
             transform: translateY(-12px) rotate(45deg);
+    background-color: white;
   }
   header .splashMenu {
     display: inline-block;
@@ -364,9 +366,12 @@ footer .footerC {
     text-decoration: none;
     color: white;
     font-size: 25px;
+    -webkit-transition: color 500ms ease;
+    transition: color 500ms ease;
   }
   header .splashMenu nav ul li a:hover {
     color: #0f0f0f;
+    text-shadow: 0px 0px 10px white;
   }
   header .active {
     -webkit-transform: translateX(0%);
