--- a/StyleComp/_mainHome.scss
+++ b/StyleComp/_mainHome.scss
@@ -12,10 +12,12 @@
             z-index: 1;
             padding-top: 2.5vh;
             padding-bottom: 2.5vh;
+            overflow: hidden;
         }
         img:hover{
             filter:none;
             transform: scale(101%);
+            
         }
     }
 }
