--- a/StyleComp/_mainContactMobile.scss
+++ b/StyleComp/_mainContactMobile.scss
@@ -1,13 +1,12 @@
 .mainContact{
-    height: 65vh;
+    height: auto;
     width: 100%;
-    margin-top: 40vh;
+    margin-top: 15vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     .mapaConteiner{
-        margin-top: 15vh;
         height: 100%;
         width: 100%;
         display: flex;
@@ -23,11 +22,9 @@
     }
     .infoConteiner{
         margin-top: 10vh;
-        margin-bottom: 10vh;
         padding-left: 10%;
         padding-right: 10%;
         font-family: 'Poppins', sans-serif;
-        height: 100%;
         width: 100%;
         display: flex;
         justify-content: center;
