--- a/style.css
+++ b/style.css
@@ -539,9 +539,9 @@ footer .footerC {
     font-family: 'Poppins', sans-serif;
   }
   .mainContact {
-    height: 65vh;
+    height: auto;
     width: 100%;
-    margin-top: 40vh;
+    margin-top: 15vh;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -557,7 +557,6 @@ footer .footerC {
             align-items: center;
   }
   .mainContact .mapaConteiner {
-    margin-top: 15vh;
     height: 100%;
     width: 100%;
     display: -webkit-box;
@@ -584,11 +583,9 @@ footer .footerC {
   }
   .mainContact .infoConteiner {
     margin-top: 10vh;
-    margin-bottom: 10vh;
     padding-left: 10%;
     padding-right: 10%;
     font-family: 'Poppins', sans-serif;
-    height: 100%;
     width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
