--- a/StyleComp/_navBarMobile.scss
+++ b/StyleComp/_navBarMobile.scss
@@ -76,6 +76,7 @@ header{
             flex: 1;
             height: 100vh;
             ul{
+                padding-left:0;
                 height: 100%;
                 display: flex;
                 flex-direction: column;
