--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 html {
   scroll-behavior: smooth;
   overflow-x: hidden;
+  height: 100vh;
+  width: 100%;
 }
 
 body {
@@ -412,6 +414,7 @@ footer .footerC {
     height: 100vh;
   }
   header .splashMenu nav ul {
+    padding-left: 0;
     height: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -570,7 +573,7 @@ footer .footerC {
             align-items: center;
   }
   .mainContact .mapaConteiner #mapid {
-    height: 500px;
+    height: 400px;
     width: 80%;
     -webkit-transition: all 1s ease;
     transition: all 1s ease;
