--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,8 @@
 html{
     scroll-behavior: smooth;
     overflow-x: hidden;
+    height: 100vh;
+    width: 100%;
 }
 body{
     position: relative;
