--- a/StyleComp/_mainProjects.scss
+++ b/StyleComp/_mainProjects.scss
@@ -1,4 +1,18 @@
 .mainProjects{
-    height: 80vh;
+    height: auto;
     width: 100%;
+    .proyecto{
+        height: 100vh;
+        width: 100%;
+        border: solid 1px black;
+        padding-top: 15vh;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        .parteA,.parteB,.parteC{
+            height: 60vh;
+            width: 30vw;
+            background-color: rgb(160, 79, 79);
+        }
+    }
 }
