--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ header {
       -ms-flex-align: center;
           align-items: center;
   border-bottom: 2px solid #c8c8c8;
-  -webkit-transition: all 1s ease;
-  transition: all 1s ease;
+  -webkit-transition: all 2s ease;
+  transition: all 2s ease;
   z-index: 10;
 }
 
@@ -169,8 +169,29 @@ header .splashMenu {
 }
 
 .mainProjects {
-  height: 80vh;
+  height: auto;
   width: 100%;
+}
+
+.mainProjects .proyecto {
+  height: 100vh;
+  width: 100%;
+  border: solid 1px black;
+  padding-top: 15vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.mainProjects .proyecto .parteA, .mainProjects .proyecto .parteB, .mainProjects .proyecto .parteC {
+  height: 60vh;
+  width: 30vw;
+  background-color: #a04f4f;
 }
 
 .mainContact {
@@ -245,6 +266,7 @@ header .splashMenu {
 
 /*PIE DE PAGINA*/
 footer {
+  margin: 0;
   height: 12vh;
   width: 100%;
   margin-top: 4rem;
