--- a/style.scss
+++ b/style.scss
@@ -28,4 +28,6 @@ body{
     @import "./StyleComp/footerMobile";
     @import "./StyleComp/mainAboutMobile";
     @import "./StyleComp/mainContactMobile";
+    @import "./StyleComp/mainProjectsMobile";
 }
+
