--- a/StyleComp/_footerMobile.scss
+++ b/StyleComp/_footerMobile.scss
@@ -1,7 +1,7 @@
 footer{
-    height: 12vh;
+    height: auto;
     width: 100%;
-    margin-top: 4rem;
+    margin-top: 20vh;
     background-color: rgba(255, 255, 255, 0.151);
     display: flex;
     justify-content: center;
