--- a/StyleComp/_mainHome.scss
+++ b/StyleComp/_mainHome.scss
@@ -12,7 +12,10 @@
             z-index: 1;
             padding-top: 2.5vh;
             padding-bottom: 2.5vh;
+            padding-left: 1.5vh;
+            padding-right: 1.5vh;
             overflow: hidden;
+            object-fit: cover;
         }
         img:hover{
             filter:none;
