--- a/StyleComp/_mainProjects.scss
+++ b/StyleComp/_mainProjects.scss
@@ -1,18 +1,51 @@
 .mainProjects{
+    border: none;
     height: auto;
     width: 100%;
     .proyecto{
         height: 100vh;
         width: 100%;
-        border: solid 1px black;
-        padding-top: 15vh;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        .parteA,.parteB,.parteC{
-            height: 60vh;
-            width: 30vw;
-            background-color: rgb(160, 79, 79);
+        .imageSector{
+            padding-top: 15vh;
+            height: 85vh;
+            width: 100%;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            img{
+                height: auto;
+                width: 30%;
+                filter: grayscale(100%) contrast(80%);
+                transition: all 1s ease;
+            }
+            img:hover{
+                filter:none;
+                transform: scale(101%);
+            }
+        }
+        .imageDescription{
+            font-family: 'Poppins', sans-serif;
+            color: rgb(105, 105, 105);
+            font-size: 20px;
+            height: 15vh;
+            width: 100%;
+            display: flex;
+            .descA{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                height: 100%;
+                width: 50%;
+            }
+            .descB{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                height: 100%;
+                width: 50%;
+            }
         }
     }
 }
