--- a/StyleComp/_navBar.scss
+++ b/StyleComp/_navBar.scss
@@ -16,7 +16,7 @@ header{
         flex: 0.5;
         display: flex;
         justify-content: flex-start;
-        padding-left: 20px;
+        padding-left: 40px;
         font-family: 'Poppins', sans-serif;
         a{
             text-decoration: none;
@@ -24,6 +24,7 @@ header{
         }    
     }
     nav{
+        font-size: 20px;
         flex: 1;
         height: 10vh;
         line-height: 10vh;
@@ -35,9 +36,11 @@ header{
         ul li a{
             text-decoration: none;
             color: rgb(105, 105, 105);
+            transition: all 1s ease;
         }
         ul li a:hover{
             color: rgb(15, 15, 15);
+            font-weight:600;
         }
     }
     .burger{
