--- a/StyleComp/_navBarMobile.scss
+++ b/StyleComp/_navBarMobile.scss
@@ -18,6 +18,9 @@ header{
         justify-content: flex-start;
         padding-left: 20px;
         font-family: 'Poppins', sans-serif;
+        h3{
+            margin: 0;
+        }
         a{
             text-decoration: none;
             color: rgb(105, 105, 105);
@@ -33,7 +36,7 @@ header{
         display: flex;
         justify-content: flex-end;
         align-items: center;
-        margin-right: 40px;
+        margin-right: 30px;
         #burger{
             height: 25px;
             width: 25px;
