--- a/style.css
+++ b/style.css
@@ -432,6 +432,9 @@ footer .footerC {
     padding-left: 20px;
     font-family: 'Poppins', sans-serif;
   }
+  header .conteinerLogo h3 {
+    margin: 0;
+  }
   header .conteinerLogo a {
     text-decoration: none;
     color: dimgray;
@@ -454,7 +457,7 @@ footer .footerC {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    margin-right: 40px;
+    margin-right: 30px;
   }
   header .burgerConteiner #burger {
     height: 25px;
