--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,7 @@ html{
 body{
     position: relative;
     font-family: 'Poppins', sans-serif;
+    scroll-behavior: smooth;
 }
 
 /*MENU NAVEGACION*/
