--- a/StyleComp/_mainProjects.scss
+++ b/StyleComp/_mainProjects.scss
@@ -26,26 +26,14 @@
         .imageDescription{
             font-family: 'Poppins', sans-serif;
             color: rgb(105, 105, 105);
-            font-size: 20px;
+            font-size: 15px;
             height: 15vh;
             width: 100%;
             display: flex;
-            .descA{
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                height: 100%;
-                width: 50%;
-            }
-            .descB{
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                height: 100%;
-                width: 50%;
-            }
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-end;
+            padding: 0 2% 0 0;
         }
     }
 }
