--- a/StyleComp/_mainProjectsMobile.scss
+++ b/StyleComp/_mainProjectsMobile.scss
@@ -28,29 +28,14 @@
         .imageDescription{
             font-family: 'Poppins', sans-serif;
             color: rgb(105, 105, 105);
-            font-size: 12px;
-            height: auto;
+            font-size: 15px;
+            height: 15vh;
             width: 100%;
             display: flex;
             flex-direction: column;
             justify-content: center;
-            align-items: center;
-            .descA{
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                height: 100%;
-                width: 50%;
-            }
-            .descB{
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                height: 100%;
-                width: 50%;
-            }
+            align-items: flex-end;
+            padding: 0 10% 0 0;
         }
     }
 }
