--- a/StyleComp/_navBar.scss
+++ b/StyleComp/_navBar.scss
@@ -21,6 +21,16 @@ header{
         a{
             text-decoration: none;
             color: rgb(105, 105, 105);
+            h3{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin: 0;
+            }
+            p{
+                font-size: 20px;
+                margin: 0 0 0 10px;
+            }
         }    
     }
     nav{
