--- a/StyleComp/_navBarMobile.scss
+++ b/StyleComp/_navBarMobile.scss
@@ -13,24 +13,32 @@ header{
     transition: all 1s ease;
     z-index: 10;
     .conteinerLogo{
-        flex: 0.5;
+        flex: 0.7;
         display: flex;
         justify-content: flex-start;
         padding-left: 20px;
         font-family: 'Poppins', sans-serif;
-        h3{
-            margin: 0;
-        }
         a{
             text-decoration: none;
             color: rgb(105, 105, 105);
-        }    
+            h3{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                margin: 0;
+                font-size: 16px;
+            }
+            p{
+                font-size: 12px;
+            }
+        }     
     }
     nav{
         display: none;
     }
     .burgerConteiner{
-        flex: 1;
+        flex: 0.3;
         height: 100%;
         width: 100%;
         display: flex;
