--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html {
 body {
   position: relative;
   font-family: 'Poppins', sans-serif;
+  scroll-behavior: smooth;
 }
 
 /*MENU NAVEGACION*/
@@ -51,6 +52,24 @@ header .conteinerLogo {
 header .conteinerLogo a {
   text-decoration: none;
   color: dimgray;
+}
+
+header .conteinerLogo a h3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0;
+}
+
+header .conteinerLogo a p {
+  font-size: 20px;
+  margin: 0 0 0 10px;
 }
 
 header nav {
@@ -220,18 +239,12 @@ header .splashMenu {
 .mainProjects .proyecto .imageDescription {
   font-family: 'Poppins', sans-serif;
   color: dimgray;
-  font-size: 20px;
+  font-size: 15px;
   height: 15vh;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-.mainProjects .proyecto .imageDescription .descA {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -239,29 +252,10 @@ header .splashMenu {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 100%;
-  width: 50%;
-}
-
-.mainProjects .proyecto .imageDescription .descB {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 100%;
-  width: 50%;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  padding: 0 2% 0 0;
 }
 
 .mainContact {
@@ -420,9 +414,9 @@ footer .footerC {
     z-index: 10;
   }
   header .conteinerLogo {
-    -webkit-box-flex: 0.5;
-        -ms-flex: 0.5;
-            flex: 0.5;
+    -webkit-box-flex: 0.7;
+        -ms-flex: 0.7;
+            flex: 0.7;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -432,20 +426,37 @@ footer .footerC {
     padding-left: 20px;
     font-family: 'Poppins', sans-serif;
   }
-  header .conteinerLogo h3 {
-    margin: 0;
-  }
   header .conteinerLogo a {
     text-decoration: none;
     color: dimgray;
+  }
+  header .conteinerLogo a h3 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin: 0;
+    font-size: 16px;
+  }
+  header .conteinerLogo a p {
+    font-size: 12px;
   }
   header nav {
     display: none;
   }
   header .burgerConteiner {
-    -webkit-box-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
+    -webkit-box-flex: 0.3;
+        -ms-flex: 0.3;
+            flex: 0.3;
     height: 100%;
     width: 100%;
     display: -webkit-box;
@@ -756,8 +767,8 @@ footer .footerC {
   .mainProjects .proyecto .imageDescription {
     font-family: 'Poppins', sans-serif;
     color: dimgray;
-    font-size: 12px;
-    height: auto;
+    font-size: 15px;
+    height: 15vh;
     width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -769,43 +780,10 @@ footer .footerC {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  .mainProjects .proyecto .imageDescription .descA {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    height: 100%;
-    width: 50%;
-  }
-  .mainProjects .proyecto .imageDescription .descB {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    height: 100%;
-    width: 50%;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    padding: 0 10% 0 0;
   }
 }
 /*# sourceMappingURL=style.css.map */
