--- a/StyleComp/_mainProjects.scss
+++ b/StyleComp/_mainProjects.scss
@@ -32,8 +32,8 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            align-items: flex-end;
-            padding: 0 2% 0 0;
+            align-items: flex-start;
+            padding: 0 0 0 2%;
         }
     }
 }
