--- a/StyleComp/_mainProjectsMobile.scss
+++ b/StyleComp/_mainProjectsMobile.scss
@@ -34,8 +34,8 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            align-items: flex-end;
-            padding: 0 10% 0 0;
+            align-items: flex-start;
+            padding: 0 0 0 10%;
         }
     }
 }
