--- a/style.scss
+++ b/style.scss
@@ -10,6 +10,12 @@ body{
     font-family: 'Poppins', sans-serif;
     scroll-behavior: smooth;
 }
+#splash{
+    height: 100vh;
+    width: 100vw;
+    background-color: rgb(105, 105, 105);
+    z-index: 88000;
+}
 
 /*MENU NAVEGACION*/
 @import "./StyleComp/navBar";
