--- a/StyleComp/_mainProjectsMobile.scss
+++ b/StyleComp/_mainProjectsMobile.scss
@@ -15,8 +15,9 @@
             align-items: center;
             img{
                 height: auto;
-                width: 30%;
+                width: 80%;
                 transition: all 1s ease;
+                margin-bottom: 5vh;
             }
             img:hover{
                 transform: scale(101%);
