--- a/style.css
+++ b/style.css
@@ -12,13 +12,6 @@ body {
   scroll-behavior: smooth;
 }
 
-#splash {
-  height: 100vh;
-  width: 100vw;
-  background-color: dimgray;
-  z-index: 88000;
-}
-
 /*MENU NAVEGACION*/
 /*MENU*/
 header {
@@ -756,9 +749,10 @@ footer .footerC {
   }
   .mainProjects .proyecto .imageSector img {
     height: auto;
-    width: 30%;
+    width: 80%;
     -webkit-transition: all 1s ease;
     transition: all 1s ease;
+    margin-bottom: 5vh;
   }
   .mainProjects .proyecto .imageSector img:hover {
     -webkit-transform: scale(101%);
