--- a/StyleComp/_mainContact.scss
+++ b/StyleComp/_mainContact.scss
@@ -38,7 +38,7 @@
                 padding-bottom: 5px;
                 a{
                 color: rgb(105, 105, 105);
-
+                text-decoration: none;
                 }
             }
          }
