--- a/StyleComp/_mainContactMobile.scss
+++ b/StyleComp/_mainContactMobile.scss
@@ -36,6 +36,11 @@
             p{
                 padding-top: 5px;
                 padding-bottom: 5px;
-            } }
+                a{
+                    color: rgb(105, 105, 105);
+                    text-decoration: none;
+                    }
+            } 
+        }
     }
 }
