--- a/StyleComp/_footer.scss
+++ b/StyleComp/_footer.scss
@@ -18,6 +18,10 @@ footer{
         i{
             color: rgb(105, 105, 105);
         }
+        a{
+            color: rgb(105, 105, 105);
+            text-decoration: none;
+        }
     }
     .footerB{
         width: 95%;
