--- a/StyleComp/_footerMobile.scss
+++ b/StyleComp/_footerMobile.scss
@@ -20,6 +20,10 @@ footer{
             color: rgb(105, 105, 105);
             padding: 20px;
         }
+        a{
+            color: rgb(105, 105, 105);
+            text-decoration: none;
+        }
     }
     .footerB{
         width: 90%;
